新增切換語言功能

--- a/html/404-zh.html
+++ b/html/404-zh.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="?lang=en">change to english</a>
     <h1>404 頁面不存在</h1>
 </body>
 </html>
